# kyzo-bench

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  rust-toolchain.toml
.claude/: settings.json
.claude/agents/: methodology-fairness-reviewer.md
.claude/hooks/: results-guard.sh
.claude/rules/: methodology.md  results-data.md
.claude/skills/add-opponent/: SKILL.md
.claude/skills/story-execution/: SKILL.md
.claude/skills/verify-the-number/: SKILL.md
benches/datalog/: README.md  fetch-datasets.sh
benches/datalog/kyzo-runner/: Cargo.toml
benches/datalog/kyzo-runner/src/: main.rs
benches/datalog/programs/: pointsto.dl  pointsto.kz  sg.dl  sg.kz  tc.dl  tc.kz
benches/datalog/rig/: Cargo.toml
benches/datalog/rig/src/: generate.rs  main.rs  souffle.rs  workloads.rs
benches/fts/: README.md  fetch-corpus.sh
benches/fts/rig/: Cargo.toml
benches/fts/rig/src/: corpus.rs  main.rs  queries.rs
benches/graph-algorithms/: README.md  fetch-datasets.sh  kuzu_baseline.py  requirements.txt
benches/oltp/: README.md
benches/oltp/kyzo-runner/: Cargo.toml
benches/oltp/kyzo-runner/src/: main.rs
benches/oltp/rig/: Cargo.toml
benches/oltp/rig/src/: main.rs  ops.rs
benches/snb/: README.md
benches/time-travel/: README.md  SPEC.md
benches/vector/: README.md  ann_baseline.py  export-flat.py  fetch-datasets.sh  requirements.txt
benches/vector/kyzo-runner/: Cargo.toml
benches/vector/kyzo-runner/src/: main.rs
datasets/: README.md
demos/ask-it-why/: README.md
demos/browser-flex/: README.md
demos/consistency-kill-shot/: README.md  docker-compose.yml  driver.py  requirements.txt  run.sh
demos/raspberry-pi-replay/: README.md
harness/: Cargo.toml  envelope.py
harness/src/: canon.rs  dataset.rs  envelope.rs  flat_vectors.rs  hardware.rs  lib.rs  record.rs  rig.rs  run.rs  seed.rs  subject.rs  workload.rs
harness/src/opponents/: mod.rs  sqlite.rs
opponents/souffle/: build.sh
opponents/sqlite/: build.sh
opponents/surrealdb-runner/: Cargo.toml
opponents/surrealdb-runner/src/: graph_recursion_probe.rs  main.rs  vector.rs
opponents/tantivy-runner/: Cargo.toml
opponents/tantivy-runner/src/: main.rs
results/: README.md  datalog--pointsto_v3k-a2k-s6k--souffle-compiled_2.5--seed22301--2026-07-03.json  datalog--pointsto_v3k-a2k-s6k--souffle_2.5--seed22301--2026-07-03.json  datalog--sg_layered-l12-w600-p2--kyzo_744758991096--seed22201--2026-07-04-2.json  datalog--sg_layered-l12-w600-p2--kyzo_744758991096--seed22201--2026-07-04-3.json  datalog--sg_layered-l12-w600-p2--kyzo_744758991096--seed22201--2026-07-04.json  datalog--sg_layered-l12-w600-p2--kyzo_bb9111a3ecdd--seed22201--2026-07-04.json  datalog--sg_layered-l12-w600-p2--souffle-compiled_2.5--seed22201--2026-07-03.json  datalog--sg_layered-l12-w600-p2--souffle_2.5--seed22201--2026-07-03.json  datalog--tc_snap-p2p-Gnutella08--kyzo_744758991096--seed22402--2026-07-04.json  datalog--tc_snap-p2p-Gnutella08--souffle-compiled_2.5--seed22402--2026-07-03.json  datalog--tc_snap-p2p-Gnutella08--souffle_2.5--seed22402--2026-07-03.json  datalog--tc_snap-wiki-Vote--kyzo_744758991096--seed22401--2026-07-04-2.json  datalog--tc_snap-wiki-Vote--kyzo_744758991096--seed22401--2026-07-04-3.json  datalog--tc_snap-wiki-Vote--kyzo_744758991096--seed22401--2026-07-04.json  datalog--tc_snap-wiki-Vote--souffle-compiled_2.5--seed22401--2026-07-03.json  datalog--tc_snap-wiki-Vote--souffle_2.5--seed22401--2026-07-03.json  datalog--tc_sparse-n10k-m30k--souffle-compiled_2.5--seed22102--2026-07-03.json  datalog--tc_sparse-n10k-m30k--souffle_2.5--seed22102--2026-07-03.json  datalog--tc_sparse-n2k-m6k--kyzo_744758991096--seed22101--2026-07-04.json  datalog--tc_sparse-n2k-m6k--kyzo_bb9111a3ecdd--seed22101--2026-07-04.json  datalog--tc_sparse-n2k-m6k--souffle-compiled_2.5--seed22101--2026-07-03.json  datalog--tc_sparse-n2k-m6k--souffle_2.5--seed22101--2026-07-03.json  fts--fts_gutenberg40--sqlite-fts5_3.53.3--seed27001--2026-07-03.json  fts--fts_gutenberg40--tantivy_0.26.1--seed27001--2026-07-03.json  graphalytics--cit-Patents--kuzu_0.11.3--2026-07-03.json  graphalytics--wiki-Talk--kuzu_0.11.3--2026-07-03.json  killshot--stitched-pipeline--seed35001--2026-07-03.json  oltp--oltp_r100k-o20k--kyzo_744758991096--seed26101--2026-07-04.json  oltp--oltp_r100k-o20k--sqlite_3.53.3--seed26101--2026-07-03.json  oltp--oltp_r1m-o100k--sqlite_3.53.3--seed26102--2026-07-03.json  vector--sift1m--faiss-flat_1.14.3--2026-07-03.json  vector--sift1m--faiss-hnsw_1.14.3--2026-07-03.json  vector--sift1m--hnswlib_0.8.0--2026-07-03.json  vector--sift1m--surrealdb-hnsw_3.2.0--2026-07-04.json
