[workspace]
resolver = "2"
members = [
    "harness",
    "benches/datalog/rig",
    "benches/datalog/kyzo-runner",
    "benches/oltp/rig",
    "benches/oltp/kyzo-runner",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/kyzodb/kyzo-bench"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
thiserror = "2"
