[workspace]
resolver = "2"
members = [
    "harness",
    "benches/datalog/rig",
    "benches/datalog/kyzo-runner",
    "benches/oltp/rig",
    "benches/oltp/kyzo-runner",
    "benches/fts/rig",
    "opponents/tantivy-runner",
    "opponents/surrealdb-runner",
    "benches/vector/kyzo-runner",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/kyzodb/kyzo-bench"

[workspace.dependencies]
# --------------------------------------------------------------------------
# THE ENGINE PIN — the one place that bumps once per KyzoDB release.
#
# Every `kyzo-runner` crate depends on this via `kyzo.workspace = true`
# (never a copy of the dependency line itself) so there is exactly one spot
# to edit, not three kept in sync by hand. Pinned exactly the way every
# opponent in this repo is pinned (`.claude/skills/add-opponent/SKILL.md`
# gate 2): `harness::locate_kyzo` reads the resolved commit straight out of
# this repo's own `Cargo.lock` (`source = "git+...?rev=...#<sha>"`), never
# from a sibling working tree's `git status`.
#
# ON EACH ENGINE RELEASE, this one line changes:
#   - pre-crates.io:  kyzo = { git = "https://github.com/kyzodb/kyzo", tag = "vX.Y.Z" }
#   - post-crates.io: kyzo = "=X.Y.Z"
# then `cargo update -p kyzo` to refresh `Cargo.lock`, re-run the headline
# matrix, and land the results as `kyzo@vX.Y.Z` per `results/README.md`.
# A `tag`/`=X.Y.Z` pin is self-documenting as a real release in the diff
# that bumps it — unlike a `rev` sha, nobody has to look up what a `tag`
# points to to know it is a shipped artifact.
#
# The 0.9.0 tag does not exist yet, so this is still a pre-release `rev`
# pin — every `kyzo@<sha>` result today is engine-team feedback, not a
# published comparison (`.claude/rules/methodology.md`). Do not "bump" this
# `rev` to a newer dev commit as a substitute for waiting on the tag:
# hand-picking which dev commit to benchmark while every opponent is frozen
# at a released version is exactly the asymmetry the fairness rule exists
# to prevent — the next edit to this line should be the `tag = "v0.9.0"`
# swap above, not another sha.
kyzo = { git = "https://github.com/kyzodb/kyzo", rev = "d2436cd8a0e142ac3b24b7bd7385aa649effb24e" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
thiserror = "2"
# Parses `Cargo.lock` so `harness::locate_kyzo` can read the engine's
# resolved git-pin commit from Cargo's own provenance record, never from a
# neighboring working tree's `git status`.
toml = "0.8"

# SurrealDB's own performance docs (surrealdb.com/docs/learn/querying/
# performance/performance-best-practices) name these flags explicitly and
# warn they do not propagate from a dependency's own Cargo.toml — a
# downstream crate that just adds `surrealdb` as a dependency gets plain
# `cargo build --release` defaults unless it sets this itself. Applied at
# the workspace level, not scoped to `opponents/surrealdb-runner` alone: it
# is every Rust binary in this repo's own best-game release profile, not a
# SurrealDB-only lever, so it cannot be read as tuned to flatter one
# opponent. (`panic = "abort"` is deliberately omitted — SurrealDB's own
# workspace uses it, but forcing it here would change unwind/panic
# semantics for every subprocess-timed opponent in this repo's process
# tree, a bigger blast radius than one perf knob justifies.)
[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true
