[package]
name = "surrealdb-runner"
description = "kyzo#71 — the SurrealDB opponent, embedded via kv-rocksdb (the same durable, file-based local engine class SQLite and KyzoDB are compared as). Pinned exactly; changing the pin is changing the opponent."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# "allocator": SurrealDB's own performance docs
# (surrealdb.com/docs/learn/querying/performance/performance-best-practices)
# recommend it for embedded use — the engine's own best-game configuration,
# not a knob we picked.
surrealdb = { version = "=3.2.0", features = ["kv-rocksdb", "allocator"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
kyzo-bench-harness = { path = "../../harness" }
serde_json.workspace = true
