[package]
name = "kyzo-runner"
description = "kyzo#22: the KyzoDB subject — loads facts, runs a KyzoScript program, writes the answer. Same pipeline shape as the Souffle invocation, timed externally by the rig."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# The engine under test. The pin itself lives in exactly one place, the
# root `Cargo.toml`'s `[workspace.dependencies]` (see the comment there for
# the release-bump procedure) — never a copy of the dependency line here.
kyzo.workspace = true
