[package]
name = "datalog-rig"
description = "kyzo#22: recursive Datalog vs Souffle — workload generation, execution, correctness cross-check."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kyzo-bench-harness = { path = "../../../harness" }
thiserror.workspace = true
