[package]
name = "fts-rig"
description = "kyzo#27 — full-text search vs Tantivy and SQLite FTS5: one corpus, one query set, match sets agreement-checked, rankings recorded as each engine's own."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kyzo-bench-harness = { path = "../../../harness" }
thiserror.workspace = true
