[package]
name = "kyzo-oltp-runner"
description = "kyzo#26 — the KyzoDB subject for the embedded-OLTP rig: replays the op stream through Db::run_script against a persistent fjall store."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# The engine under test. The pin itself lives in exactly one place, the
# root `Cargo.toml`'s `[workspace.dependencies]` (see the comment there for
# the release-bump procedure) — never a copy of the dependency line here.
kyzo.workspace = true
