[package]
name = "kyzo-vector-runner"
description = "kyzo#25: the KyzoDB subject — loads SIFT1M into a relation, builds an ::hnsw index, sweeps ef for the recall/QPS curve. Same method as the hnswlib/FAISS baselines."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# The engine under test, pinned exactly the way every opponent in this repo
# is pinned (`.claude/skills/add-opponent/SKILL.md` gate 2): an exact
# revision, resolved once into `Cargo.lock`, never a live sibling working
# tree. `rev` names a commit on `kyzodb/kyzo` main; `harness::locate_kyzo`
# reads the resolved 40-char sha straight out of `Cargo.lock`, so the pin's
# identity can never drift from what was actually built. Pre-release only —
# once the engine cuts its first tagged release this becomes
# `kyzo = "=0.Y.Z"` from crates.io, the same shape as every other subject.
kyzo = { git = "https://github.com/kyzodb/kyzo", rev = "d2436cd8a0e142ac3b24b7bd7385aa649effb24e" }
kyzo-bench-harness = { path = "../../../harness" }
# Same ndarray line as kyzo-core, to hand query vectors across the API
# boundary as DataValue::Vec without any text round-trip.
ndarray = "0.17"
