[package]
name = "kyzo-vector-runner"
description = "kyzo#25: the KyzoDB subject — loads SIFT1M into a relation, builds an ::hnsw index, sweeps ef for the recall/QPS curve. Same method as the hnswlib/FAISS baselines."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# The engine under test. The pin itself lives in exactly one place, the
# root `Cargo.toml`'s `[workspace.dependencies]` (see the comment there for
# the release-bump procedure) — never a copy of the dependency line here.
kyzo.workspace = true
kyzo-bench-harness = { path = "../../../harness" }
# Same ndarray line as kyzo-core, to hand query vectors across the API
# boundary as DataValue::Vec without any text round-trip.
ndarray = "0.17"
